# common/src/dto/passkey_finish_login_request_dto.rs
@@ -1,0 +1,7 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Serialize, Deserialize)]
+pub struct PasskeyFinishLoginRequestDto {
+    pub name: String,
+    pub credential: serde_json::Value,
+}
