# common/src/dto/passkey_finish_registration_request_dto.rs
@@ -1,0 +1,7 @@
+use serde::{Deserialize, Serialize};
+
+#[derive(Clone, Serialize, Deserialize)]
+pub struct PasskeyFinishRegistrationRequestDto {
+    pub name: String,
+    pub credential: serde_json::Value,
+}
